overlapping error in cart fixed

--- a/src/Components/Layout/App.css
+++ b/src/Components/Layout/App.css
@@ -19,7 +19,7 @@ body {
   color: var(--main-text);
   font-family: "Syne", sans-serif;
   font-size: 24px;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -102,7 +102,9 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 60px;
 }
+
 
 .button-link {
   background-color: var(--main-color);
@@ -183,8 +185,8 @@ a:hover {
   border: 2px solid white;
   color: var(--secondary-text);
   border-radius: 5px;
-  width: 80%;
-  max-width: 400px;
+  width: 100%;
+  max-width: 600px;
   margin: 20px auto;
   padding: 20px;
   margin-bottom: 80px;
@@ -228,7 +230,6 @@ a:hover {
 
 /* booking cart */
 .specific-booking {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -240,23 +241,24 @@ a:hover {
   max-width: 400px;
   margin: 20px auto;
   padding: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .remove-item-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  align-self: flex-end;
   background: none;
   border: none;
   color: var(--main-color-light);
   cursor: pointer;
   font-size: 1em;
+  margin-top: -10px;
+  margin-right: -10px;
 }
 
 .remove-item-btn:hover {
   color: var(--main-color);
 }
+
 
 /* about */
 .about p {
